// 예약 서비스 데이터베이스 모델링

Table reservation {
  id bigint [pk, increment]
  user_id bigint
  room_id bigint
  check_in_date date
  check_out_date date
  total_price decimal
  status varchar
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table reservation_status {
  id bigint [pk, increment]
  reservation_id bigint [ref: > reservation.id]
  status varchar
  description text
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table reservation_history {
  id bigint [pk, increment]
  reservation_id bigint [ref: > reservation.id]
  action varchar
  description text
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table reservation_notification {
  id bigint [pk, increment]
  reservation_id bigint [ref: > reservation.id]
  type varchar
  status varchar
  recipient varchar
  content text
  sent_at timestamp
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table cancellation_policy {
  id bigint [pk, increment]
  accommodation_id bigint
  days_before_checkin int
  refund_percentage decimal
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
} 